implement index.scss

--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <!-- favicon -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/components/index.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png" />
     <title>frontendmentore_example</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="img_container">
-            <img src="/images/image-product-desktop.jpg" alt="">
+      <div class="img_container">
+        <img src="/images/image-product-desktop.jpg" alt="" />
+      </div>
+      <div>
+        <h4>perfume</h4>
+        <h1>Gabrielle Essence Eau De Parfum</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
+          neque nemo omnis adipisci illum labore, officiis accusantium
+          recusandae eaque earum.
+        </p>
+        <div class="price_container">
+          <div class="price">
+            <span class="new_price">$149.99</span>
+            <span class="old_price">$169.99</span>
+          </div>
+          <button>Add to cart</button>
         </div>
-        <div></div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
